# zac

./: .gitignore  Cargo.toml  README.md  update.sh
.github/workflows/: dev.yml  master.yml  rust.yml
src/: account.rs  check_up.rs  command.rs  command_async.rs  command_blocking.rs  command_share.rs  completer.rs  lib.rs  macros.rs  main.rs  network.rs  update.rs  utils.rs
