[package]
name = "zac"
version = "0.0.1"
about = "zac(zju-assistant-cli) 是一个用于获取或上传雪灾浙大资源的命令行工具"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
dialoguer="0.11.0"
reqwest={version = "0.12.12", features = ["cookies","blocking","json"]}
cookie_store="0.21.1"
reqwest_cookie_store="0.8.0"
anyhow="1.0.95"
regex ={ version = "1.11.1"}
num="0.4.3"
rayon="1.5.1"
