[package]
name = "zac"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer="0.11.0"
reqwest={version = "0.12.12", features = ["cookies","blocking","json","multipart"]}
cookie_store="0.21.1"
reqwest_cookie_store="0.8.0"
anyhow="1.0.95"
regex ={ version = "1.11.1"}
num="0.4.3"
rayon="1.5.1"
indicatif={version = "0.17.0"}
rustyline="15.0.0"
chrono="0.4"
html2text="0.13.6"
self_update = "0.42.0"

[profile.release]
panic = "abort"
