[package]
name = "zac"
version = "0.1.8"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer="0.11.0"
reqwest={version = "0.12.12", features = ["cookies","blocking","json","multipart"]}
cookie_store="0.21.1"
reqwest_cookie_store="0.8.0"
anyhow="1.0.95"
regex ={ version = "1.11.1"}
num="0.4.3"
rayon="1.5.1"
indicatif={version = "0.17.0"}
rustyline="15.0.0"
chrono="0.4"
html2text="0.13.6"
self_update = "0.42.0"
termion = "4.0.3"

[profile.release]
opt-level = 3         # 启用最高级别优化（-O3），尽可能提取性能
lto = "fat"           # 使用全量 LTO，允许跨模块全局优化
codegen-units = 1     # 将代码生成单元数量设为 1，允许编译器做最充分的全局优化
panic = "abort"       # 使用 abort 模式以减少 panic 时的额外开销
strip = true          # 剥除调试符号，减小二进制文件大小（可有助于加载时间）
debug = false         # 禁止生成调试信息
incremental = false   # 关闭增量编译，确保全量优化
